added changes for issue history